# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindAssimp.cmake
lib/core/: camera.cpp  camera.h  core.cpp  core.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  sphere.cpp  sphere.h
lib/src/: glad.c
resources/models/rock/: rock.mtl
src/: main.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle.cpp
src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: shader.fs  shaders_class.cpp
src/1.getting_started/3.5.shaders_exercise2/: shader.fs  shader.vs  shader_excercise2.cpp
src/1.getting_started/3.6.shaders_exercise3/: shader.fs  shader.vs  shader_excercise2.cpp
src/1.getting_started/4.1.textures/: shader.fs  shader.vs  textures.cpp
src/1.getting_started/4.2.textures_combined/: textures.cpp
src/1.getting_started/4.3.textures_exercise1/: shader.fs
src/1.getting_started/4.4.textures_exercise2/: shader.fs  textures.cpp
src/1.getting_started/4.5.textures_exercise3/: textures.cpp
src/1.getting_started/4.6.textures_exercise4/: shader.fs  textures.cpp
src/1.getting_started/5.1.transformations/: main.cpp  shader.vs
src/1.getting_started/5.2.transformations_exercise2/: main.cpp
src/1.getting_started/6.1.coordinate_systems/: main.cpp  shader.vs
src/1.getting_started/6.2.coordinate_systems_depth/: main.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: main.cpp
(+196 files in other folders)
